--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
 body{
     background-color: #2e2c51;
@@ -7,17 +7,20 @@ body{
 
 .cabecalho{
     display: flex;
-    font-family: "Poppins", serif;
+    font-family: "Orbitron", serif;
     font-weight: 400;
     font-style: normal;
     font-size: 1.5rem;
     align-items: center;
-    border: 1px solid red;
 }
 
 .cabecalho_titulo{
     font-size: 2.5rem;
     font-weight: bolder;
+    background: linear-gradient(90deg, rgba(227,209,250,1) 20%, rgba(199,216,253,1) 48%, rgba(202,248,247,1) 99%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
 }
 
 .cabecalho_menu{
