--- a/style/style.css
+++ b/style/style.css
@@ -10,8 +10,12 @@
 }
 
 body{
-    background-color: var(--cor-primaria);;
+    background-image: url("/assets/bgimage1.jpg");
+    background-repeat: no-repeat, repeat;
+    background-size: cover;
     padding: 2%;
+    box-sizing: border-box;
+    background-color:var(--cor-primaria);
 }
 
 .cabecalho{
