--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,14 @@ body{
     background: linear-gradient(90deg, rgba(227,209,250,1) 20%, rgba(199,216,253,1) 48%, rgba(202,248,247,1) 99%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    cursor: pointer;
+}
+
+.cabecalho_titulo:hover{
+    background: rgb(202,248,247);
+    background: linear-gradient(90deg, rgba(202,248,247,1) 20%, rgba(227,209,250,1) 52%, rgba(199,216,253,1) 99%); 
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .cabecalho_menu_principal{
