--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,7 @@ body{
     display: flex;
     flex-direction: column;
     border: 5px double var(--cor-tercearia);
+    border-radius: 5px;
     text-decoration: none;
 }
 
@@ -111,6 +112,7 @@ body{
 
 .favorito_imagem{
     height: 100%;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .rodape{
