ajustado background image para dispositivos menores que 1200

--- a/style/style.css
+++ b/style/style.css
@@ -133,7 +133,7 @@ body{
 @media (max-width: 1200px){
     body{
         height: 100vh;
-        background-image: none;
+        background-repeat: repeat-y;
     }
     
     .cabecalho{
